Fix overflow

--- a/static/stylesheets/imports/_main.scss
+++ b/static/stylesheets/imports/_main.scss
@@ -364,6 +364,10 @@ form, fieldset {
   flex-direction: column;
   position: relative;
 
+  input, label, select {
+    width: 100%;
+  }
+
   .address {
     display: flex; gap: 15px; flex-wrap: wrap;
     margin-bottom: $base-sizing*2;
